# Chess

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: demo.cpp  engine.cpp  standard_definitions.h  todo.txt  types.h
src/board/: board.cpp  board.h
src/game/: game.cpp  game.h
src/graphical_board/: graphical_board.cpp  graphical_board.h
src/movegen/: movegen.cpp  movegen.h  precomputed.h  zobrist.h
src/nn_training/: trainer.py
src/nn_training/conv_net/: model.py
src/nn_training/data_stream/: data_stream.cpp  data_stream.h  test.cpp
src/nn_training/training_data/: data_loader.cpp  data_loader.h  data_stream.cpp  data_stream.h  dataset.py  feature_sets.cpp  feature_sets.h  feature_sets.py  test.cpp
src/perft/: accuracy_test_suite.csv  perft.cpp  perft.h
src/uci_engine/: process_handler.cpp  process_handler.h  uci_engine.cpp  uci_engine.h
